@@ -8,7 +8,7 @@
 #include "OpenGL/texture.h"
 
 #include "World/entity.h"
-#include "World/mesh.h"
+#include "World/model.h"
 
 #include "Modules/imgLoader/imgLoader.h"
 
@@ -16,20 +16,20 @@
 class Things{
 public:
 	static Shader& LoadShader
-	(const std::string name, const char* vertPath, const char* fragPath);
-	static Texture& LoadTexture(std::string name);
+	(const std::string& name, const char* vertPath, const char* fragPath);
+	static Texture& LoadTexture(const std::string& name);
 	static Texture& LoadTexture
-	(std::string name, const char* file, bool flipImage);
-	static Mesh& LoadMesh(std::string name);
+	(const std::string& name, const char* file, bool flipImage);
+	static Model& LoadModel(const std::string& name);
 
-    static Shader& GetShader(const std::string name);
-	static Texture& GetTexture(const std::string name);
-	static Mesh& GetTMesh(const std::string name);
+    static Shader& GetShader(const std::string& name);
+	static Texture& GetTexture(const std::string& name);
+	static Model& GetModel(const std::string& name);
 
 private:
-	static std::map<std::string, Shader> m_Shaders;
-	static std::map<std::string, Texture> m_Textures;
-    static std::map<std::string, Mesh> m_Meshes;
+	static std::map<std::string, Shader> m_shaders;
+	static std::map<std::string, Texture> m_textures;
+    static std::map<std::string, Model> m_models;
 };
 
 #endif
